--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,11 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
     androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
+    implementation "androidx.datastore:datastore:$rootProject.dataStoreVersion"
+    implementation "androidx.datastore:datastore-core:$rootProject.dataStoreVersion"
+    implementation "androidx.datastore:datastore-preferences:$rootProject.dataStoreVersion"
+    implementation "androidx.datastore:datastore-preferences-core:$rootProject.dataStoreVersion"
+
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-common-java8:$rootProject.lifecycleVersion"
