--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <activity
       android:name=".MainActivity"
       android:exported="true"
+      android:configChanges="locale"
       android:label="@string/app_name"
       android:theme="@style/Theme.Notes.NoActionBar">
       <intent-filter>
